# ihk-pruefungsstatistik-dashboard

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/csv_data/20224/: FachinformatikerFachinformatikerin-Fachrichtung:-Anwendungsentwicklung.csv
data/csv_data/20232/: FachinformatikerFachinformatikerin-Fachrichtung:-Anwendungsentwicklung.csv  FachinformatikerFachinformatikerin-Fachrichtung:-Daten-und-Prozessanalyse.csv  FachinformatikerFachinformatikerin-Fachrichtung:-Digitale-Vernetzung.csv  FachinformatikerFachinformatikerin-Fachrichtung:-Systemintegration.csv  Kaufmann-Kauffrau-für-Büromanagement.csv  Kaufmann-Kauffrau-für-Dialogmarketing.csv  Kaufmann-Kauffrau-für-Marketingkommunikation.csv  Kaufmann-Kauffrau-im-E-Commerce.csv
data/csv_data/20234/: FachinformatikerFachinformatikerin-Fachrichtung:-Anwendungsentwicklung.csv  FachinformatikerFachinformatikerin-Fachrichtung:-Daten-und-Prozessanalyse.csv  FachinformatikerFachinformatikerin-Fachrichtung:-Digitale-Vernetzung.csv  FachinformatikerFachinformatikerin-Fachrichtung:-Systemintegration.csv  Kaufmann-Kauffrau-für-Büromanagement.csv  Kaufmann-Kauffrau-für-Dialogmarketing.csv  Kaufmann-Kauffrau-für-Marketingkommunikation.csv  Kaufmann-Kauffrau-im-E-Commerce.csv
src/: 1_statistics_scraper.py  2_fix_xls_files.py  3_convert_xls_to_csv.ipynb  statistics_scraper.py
src/backend/: data_functions.py
src/data_acquisition/: 1_statistics_scraper.py  2_convert_xls_to_csv.py  berufe.py
src/frontend/: app.py
src/frontend/assets/: custom.css  styles.css
src/frontend/pages/: data_page.py  (+1 more)
(+3 files in other folders)
