[tool.poetry]
name = "ihk-pruefungsstatistik-dashboard"
version = "0.1.0"
description = "Dashboard for the IHK Prüfungsstatistik"
authors = ["Adrian H. <61416203+mainpyp@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.47.0"
dash = "^2.18.1"
pandas = "^2.2.2"
tqdm = "^4.66.5"
jupyter = "^1.1.1"
lxml = "^5.3.0"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
dash-bootstrap-components = "^1.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
